# lumiscript

./: README.md  meson.build
examples/: example-aurora.lumi  example-meteors.lumi
src/: internal.h  lsp_main.c  parser.c
tests/: compile_optimization.sh  lsp_smoke.sh  optimization_semantics.sh
tests/expected/: vm-animation-expected.txt  vm-aurora-expected.txt  vm-conditional-expected.txt  vm-meteors-expected.txt  vm-nested-expected.txt  vm-ripple-expected.txt  vm-stateful-expected.txt
tests/fixtures/: optimization-rand-semantics.lumi  optimization-semantics.lumi
tests/inputs/: optimization-rand-semantics-input.txt  optimization-ripple-input.txt  optimization-semantics-input.txt  vm-animation-input.txt  vm-aurora-input.txt  vm-conditional-input.txt  vm-meteors-input.txt  vm-nested-input.txt  vm-ripple-input.txt  vm-stateful-input.txt
zephyr/: module.yml
